<resources>
    <string name="app_name">MyTODOList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">Create New Task</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="title_activity_task_edit">TaskEditActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="pref_key_vibrate">vibrate</string>
    <string name="pref_value_vibrate">Vibrate</string>
    <string name="pref_key_ringtone">ringtone</string>
    <string name="pref_value_ringtone">Set Ringtone</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="pref_key_view">view</string>
    <string name="pref_value_view">Change View</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_search_result_grid_view">SearchResultGridViewActivity</string>
    <string name="pref_key_snooze">Snooze</string>
    <string name="pref_value_snooze">Snooze Time</string>
    <string name="title_search_results">Search Results</string>
    <string name="title_detailed_view">Detailed View</string>
    <string name="title_edit_task">Edit My Task</string>
    <string name="title_settings">Settings</string>
    <string name="title_main_tasks_activity">My Tasks Today</string>
    <string name="pref_key_quiet_hours_vibrate_and_sound">quiet_hours_vibrate_and_sound</string>
    <string name="pref_value_quiet_hours_vibrate_and_sound">Vibration and Sound</string>
    <string name="pref_key_quiet_hours_start">start_time</string>
    <string name="pref_value_quiet_hours_start">Quiet hours start</string>
    <string name="pref_key_quiet_hours_end">end_time</string>
    <string name="pref_value_quiet_hours_end">Quiet hours end</string>
</resources>
